# pre-commit

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
