[tool.poetry]
name = "pre-commit"
version = "0.0.1"
description = "Pre commit hooks"
authors = ["Bryan Neyedli <bryan.neyedli@commit.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
